--- a/partials/components/product-card.html
+++ b/partials/components/product-card.html
@@ -46,15 +46,10 @@
         <img src="/assets/product-image-whitebg.jpg" alt="" loading="lazy" decoding="async" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300">
       </a>
       <!-- Badges container -->
-      <div x-show="i % 2 == 0" class="absolute md:top-3 top-2 md:left-3 left-2 flex flex-wrap gap-1 z-20">
-        <!-- <div class="badge-primary">Offer</div> -->
-        <a href="#" class="badge-offer"><span class="button-text" data-text="Buy 10, Get 6"><span>Buy 10, Get 6</span></span><span class="icon icon-arrow w-2.5 h-2.5 rotate-135"></span></a>
+      <div x-show="i % 2 == 0" class="absolute md:top-3 top-2 md:left-3 left-2 md:right-3 right-2 flex flex-wrap gap-1 z-20">
+        <a href="#" class="badge-offer-link"><span class="button-text" data-text="Buy 10, Get 6 Free"><span>Buy 10, Get 6 Free</span></span><span class="icon icon-arrow-2 w-3 h-3 -rotate-90 -mr-1"></span></a>
+        <span x-show="i === 2" class="badge-offer">February Offer</span>
       </div>
-      <!-- Lower Badges container -->
-      <!-- <div class="absolute bottom-2 left-2 flex flex-row gap-1 flex-wrap z-20">
-        <a href="#" class="badge-offer"><span class="button-text" data-text="Buy 10, Get 6"><span>Buy 10, Get 6</span></span><span class="icon icon-arrow w-2.5 h-2.5 rotate-135"></span></a>
-        <div class="badge-offer">Non-clickable offer</div>
-      </div> -->
     </div>
     <div class="flex flex-col items-start gap-2 md:p-5 p-4 border border-brand-border rounded-xl bg-white">
       <div class="badge-text">Image Skincare</div>
@@ -97,7 +92,7 @@
       </div>
 
       <!-- Quantity selector -->
-      <div x-data="{ qty: 1 }" class="flex items-center w-full border border-brand-border rounded-full">
+      <div x-data="{ qty: 1 }" class="flex items-center w-full border border-brand-border hover:border-brand-primary-700 rounded-full">
         <button
           @click="qty = Math.max(1, qty - 1)"
           class="w-10 h-10 flex items-center justify-center text-brand-dark hover:bg-brand-primary-100 rounded-l-full transition-colors cursor-pointer"
