--- a/partials/home/COMPONENTS.html
+++ b/partials/home/COMPONENTS.html
@@ -3,88 +3,92 @@
     <h1 class="heading-primary md:text-4xl text-2xl">Components</h1>
     <h2 class="heading-secondary text-xl">Buttons</h2>
 
-    <div class="grid w-full grid-cols-2  bg-neutral-400 rounded-xl p-8">
+    <div class="grid w-full grid-cols-2 bg-neutral-400 rounded-xl p-8">
       <div class="flex flex-col items-start gap-4">
         <a href="#" class="button-primary">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-primary"><span>button-primary</span></span>
         </a>
         <a href="#" class="button-primary-icon">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-primary-icon"><span>button-primary-icon</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-transparent">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-transparent"><span>button-transparent</span></span>
         </a>
         <a href="#" class="button-transparent-icon">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-transparent-icon"><span>button-transparent-icon</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-secondary">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-secondary"><span>button-secondary</span></span>
         </a>
         <a href="#" class="button-secondary-icon">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-secondary-icon"><span>button-secondary-icon</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-tertiary">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-tertiary"><span>button-tertiary</span></span>
         </a>
         <a href="#" class="button-tertiary-icon">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-tertiary-icon"><span>button-tertiary-icon</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <div class="flex flex-row w-full">
-          <a href="#" class="button-text-icon w-1/2">
-            <span>Read More</span>
+          <a href="#" class="button-text-icon w-1/3">
+            <span>button-text-icon</span>
             <span class="icon icon-arrow"></span>
           </a>
-          <a href="#" class="button-text-icon text-brand-light w-1/2">
-            <span>Read More</span>
+          <a href="#" class="button-text-icon text-brand-light w-1/3">
+            <span>button-text-icon</span>
+            <span class="icon icon-arrow"></span>
+          </a>
+          <a href="#" class="button-text-icon text-brand-dark w-1/3">
+            <span>button-text-icon</span>
             <span class="icon icon-arrow"></span>
           </a>
         </div>
       </div>
       <div class="flex flex-col max-w-xs gap-4">
         <a href="#" class="button-primary">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-primary"><span>button-primary</span></span>
         </a>
         <a href="#" class="button-primary-icon">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-primary-icon"><span>button-primary-icon</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-transparent">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-transparent"><span>button-transparent</span></span>
         </a>
         <a href="#" class="button-transparent-icon">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-transparent-icon"><span>button-transparent-icon</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-secondary">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-secondary"><span>button-secondary</span></span>
         </a>
         <a href="#" class="button-secondary-icon">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-secondary-icon"><span>button-secondary-icon</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
         </a>
         <a href="#" class="button-tertiary">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-tertiary"><span>button-tertiary</span></span>
         </a>
         <a href="#" class="button-tertiary-icon">
-          <span class="button-text" data-text="Click Me"><span>Click Me</span></span>
+          <span class="button-text" data-text="button-tertiary-icon"><span>button-tertiary-icon</span></span>
           <span>
             <span class="icon-arrow"></span>
           </span>
@@ -94,22 +98,40 @@
 
     <h2 class="heading-secondary text-xl">Badges</h2>
 
-    <div class="grid w-full grid-cols-2  bg-neutral-400 rounded-xl p-8">
+    <div class="grid w-full grid-cols-2 bg-neutral-400 rounded-xl p-8">
       <div class="flex flex-col items-start gap-4">
+        <p class="text-xs text-brand-light font-bold uppercase tracking-wide">Light background</p>
         <div class="badge-transparent">
           <span class="relative flex size-2 -ml-1">
             <span class="absolute inline-flex h-full w-full animate-ping rounded-full bg-brand-primary-700 opacity-75"></span>
             <span class="relative inline-flex size-2 rounded-full bg-brand-primary-700"></span>
           </span>
-          Welcome to Wigmore Medical
+          badge-transparent
         </div>
-        <div class="badge-primary">Welcome to Wigmore Medical</div>
+        <div class="badge-primary">badge-primary</div>
+        <div class="badge-offer">badge-offer</div>
+        <a href="#" class="badge-offer-link">
+          <span class="button-text" data-text="badge-offer-link"><span>badge-offer-link</span></span>
+          <span class="icon icon-arrow-2 w-3 h-3 -rotate-90 -mr-1"></span>
+        </a>
+        <div class="badge-text">badge-text</div>
+        <div class="badge-text-sm">badge-text-sm</div>
+      </div>
+      <div class="flex flex-col items-start gap-4 bg-brand-dark rounded-xl p-4">
+        <p class="text-xs text-brand-light font-bold uppercase tracking-wide">Dark background</p>
+        <div class="badge-transparent">
+          <span class="relative flex size-2 -ml-1">
+            <span class="absolute inline-flex h-full w-full animate-ping rounded-full bg-brand-light opacity-75"></span>
+            <span class="relative inline-flex size-2 rounded-full bg-brand-light"></span>
+          </span>
+          badge-transparent
+        </div>
       </div>
     </div>
 
     <h2 class="heading-secondary text-xl">Typography</h2>
 
-    <div class="grid w-full grid-cols-2  bg-neutral-800 rounded-xl p-8">
+    <div class="grid w-full grid-cols-2  bg-brand-dark rounded-xl p-8">
       <div class="flex flex-col items-start gap-4">
         <h1 class="heading-primary md:text-5xl text-2xl text-brand-light">
           Primary Heading 5xl
