--- a/partials/navigation.html
+++ b/partials/navigation.html
@@ -60,7 +60,7 @@
       <div class="flex md:gap-3 gap-0 w-full min-h-18">
         <!-- Rounded block 1 -->
         <div :class="(navigationMenuOpen || searchDropdownOpen) && 'rounded-t-3xl rounded-b-none'"
-          class="relative xl:grow grow-0 flex duration-200 justify-between items-center md:pl-5 pl-3 md:gap-8 gap-2 xl:border border-brand-border xl:bg-brand-light rounded-3xl">
+          class="relative xl:grow grow-0 flex duration-200 justify-between items-center md:px-5 px-3 md:gap-8 gap-2 xl:border border-brand-border xl:bg-brand-light rounded-3xl">
           <a class="block text-teal-600" href="/">
             <span class="sr-only">Home</span>
             <img src="/assets/wigmore-medical-logo.png" alt="" class="md:max-w-20 max-w-18">
