--- a/partials/components/product-card.html
+++ b/partials/components/product-card.html
@@ -46,9 +46,9 @@
         <img src="/assets/product-image-whitebg.jpg" alt="" loading="lazy" decoding="async" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300">
       </a>
       <!-- Badges container -->
-      <div x-show="i % 2 == 0" class="absolute md:top-3 top-2 md:left-3 left-2 md:right-3 right-2 flex flex-wrap gap-1 z-20">
-        <a href="#" class="badge-offer-link"><span class="button-text" data-text="Buy 10, Get 6 Free"><span>Buy 10, Get 6 Free</span></span><span class="icon icon-arrow-2 w-3 h-3 -rotate-90 -mr-1"></span></a>
-        <span x-show="i === 2" class="badge-offer">February Offer</span>
+      <div class="absolute md:top-3 top-2 md:left-3 left-2 md:right-3 right-2 flex flex-wrap gap-1 z-20">
+        <a x-show="i % 2 == 0" href="#" class="badge-offer-link"><span class="button-text" data-text="Buy 10, Get 6 Free"><span>Buy 10, Get 6 Free</span></span><span class="icon icon-arrow-2 w-3 h-3 -rotate-90 -mr-1"></span></a>
+        <span x-show="i === 3" class="badge-offer">February Offer</span>
       </div>
     </div>
     <div class="flex flex-col items-start gap-2 md:p-5 p-4 border border-brand-border rounded-xl bg-white">
